--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="motivation">
-    <img src="./assets/images/modi11.jpg" alt="modi">
+    <img src="modi11.jpg" alt="modi">
     <h1>She Was just 21 when she started.</h1>
     <p>Today her platform has raied over 15 crores, <br/> paying for surgeries and the education </p>
   </div>
